syntax = "proto3";

package envoymobile.extensions.filters.http.test_logger;

message TestLogger {
}
